# Pydantic_AI_Agents

./: .gitignore  check_models.py  email_feedback.py  google_apis.py  graph_example1.py  graph_example2.py  load_model.py  product_listings_2025-09-09_13-00-23.csv  pyproject.toml  sheets_agent.py  soup.txt  weather_agents.py  web_scrapping.py  web_scrapping_agent.py
